--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
-node_modules
-./features/step_definitions
+frontend/node_modules
+frontend/features/step_definitions
 ./questionario_features.docx
+./.idea
