--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,7 @@
     "cy:open-e2e": "npx cypress open open --e2e --browser electron",
     "cy:run-e2e": "npx cypress run --e2e",
     "cy:show-coverage": "open ./cypress-coverage/lcov-report/index.html",
-    "lint": "npx eslint \"src/**/*.{js,ts,html}\" --quiet --fix",
-    "format": "npx prettier \"src/**/*.{js,ts,html,css,scss}\" --write",
-    "prepare": "husky install"
+    "webpack": "webpack --config webpack.config.ts"
   },
   "private": true,
   "dependencies": {
@@ -58,15 +56,12 @@
     "cypress": "^12.16.0",
     "dotenv-webpack": "^8.0.1",
     "esbuild": "^0.18.10",
-    "eslint": "^8.43.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-plugin-prettier": "^4.2.1",
-    "husky": "^8.0.0",
     "jest": "^29.6.0",
     "jest-preset-angular": "^13.1.1",
-    "prettier": "^2.8.8",
-    "prettier-eslint": "^15.0.1",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "~5.0.0"
+    "typescript": "~5.0.0",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4"
   }
 }
